# ai-job-agent

./: .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  OPTIMIZATION_GUIDE.md  README.md  TECHNICAL_ARCHITECTURE.md  TEST_PROMPTS.md  bot.json  new_user.json  pyproject.toml  railway.toml  requirements.txt  test_agent.py
.cursor/rules/: cursor-rules.mdc  plan.md  prd.md  tech-stack.mdc
app/: __init__.py  main.py
app/models/: __init__.py  agent.py  job.py
app/services/: __init__.py  agent_service.py  job_service.py  openai_service.py  supabase_service.py
database/: conversations.sql  jobs.sql  messages.sql  schema.sql
tests/: __init__.py
