[project]
name = "jobtrack-ai"
version = "0.1.0"
description = "AI-powered job application tracking agent"
authors = [
    {name = "JobTrackAI Team"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "openai>=1.99.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.0",
    "supabase>=2.18.0",
    "psycopg2-binary>=2.9.10",
    "aiohttp>=3.12.15",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
